--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "ejs": "~2.6.1",
     "email-validator": "^2.0.4",
     "express": "~4.16.1",
+    "express-joi-validation": "^5.0.1",
     "http-errors": "~1.6.3",
+    "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1"
   },
