--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
