--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "prisma": "^4.11.0"
